# katenginegl

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
engine/: CMakeLists.txt
engine/src/: input_manager.cpp  input_manager.hpp
engine/src/kat/: color.hpp  engine.cpp  engine.hpp  input_manager.cpp  input_manager.hpp  window.cpp  window.hpp
engine/src/kat/renderer/: buffer.cpp  buffer.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  vertex_array.cpp  vertex_array.hpp
engine/src/kat/signals/: signals.cpp  signals.hpp
engine/src/kat/utils/: color.hpp  signals.hpp
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h  wgl.h
libs/glad/src/: wgl.c
sample/: CMakeLists.txt
sample/src/: main.cpp
